<resources>
    <string name="app_name">satumeja</string>
    <string name="register_sc">Registrasi Sekolah</string>
    <string name="email">Email</string>
    <string name="sign_in">Masuk</string>
    <string name="verify">Verifikasi</string>
    <string name="empty"> </string>
    <string name="otp">Masukkan Kode OTP</string>
    <string name="register">Registrasi</string>
    <string name="school_name">Nama Sekolah</string>
    <string name="login_school">Login Sekolah</string>
    <string name="login">Masuk</string>
    <string name="register_to_your_account">Daftar Akun Anda</string>
    <string name="nisn">NISN</string>
    <string name="name">Nama</string>
    <string name="age">Umur</string>
    <string name="classes">Kelas</string>
    <string name="continues">Lanjut</string>
    <string name="set_your_fingerprint">Atur Sidik Jari</string>
    <string name="congrats1">Selamat, akun mu telah teregistrasi, tunggu sebentar untuk verifikasi</string>
    <string name="congratulation">Selamat akun anda telah siap</string>
    <string name="fingerprint">Sidik Jari</string>
    <string name="home">Beranda</string>
    <string name="complete">Selesai</string>
    <string name="scan_your_fingerprint_to_get_lunch">Pindai sidik jari mu untuk mendapatkan makan siang</string>
    <string name="headmaster">Kepala Sekolah</string>
    <string name="daftar_sidik_jari">daftar sidik jari</string>
    <string name="statistik">statistik</string>
    <string name="chef">Koki</string>
    <string name="fill_in_the_list_below">Isi kolom di bawah ini</string>
    <string name="bahan_yang_di_beli">Bahan yang di beli:</string>
    <string name="send">Kirim</string>
    <string name="menu">Menu</string>
    <string name="menu_of_the_day">Menu hari ini</string>
    <string name="no">Tidak</string>
    <string name="yes">Iya</string>
    <string name="start">Mulai</string>
    <string name="Beranda">Beranda</string>
    <string name="it_s_your_menu_today_to_confirm">Ini menu anda hari ini untuk dikonfirmasi</string>
    <string name="budget">Budget</string>
    <string name="bahan">Bahan</string>
    <string name="siswa">Siswa</string>
    <string name="cek_menu">Cek Menu</string>
</resources>