<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logosvg" />

    <TextView
        android:id="@+id/register_sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:gravity="top"
        android:lineHeight="32sp"
        android:text="@string/register_to_your_account"
        android:textAppearance="@style/text_bold" />

    <EditText
        android:id="@+id/edit_text_1"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_below="@id/register_sc"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:elevation="4dp"
        android:hint="@string/nisn" />

    <EditText
        android:id="@+id/edit_text_2"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_below="@id/edit_text_1"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:elevation="4dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/edit_text_3"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_below="@id/edit_text_2"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:elevation="4dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/edit_text_4"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_below="@id/edit_text_3"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:elevation="4dp"
        android:hint="@string/age" />

    <EditText
        android:id="@+id/edit_text_6"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_below="@id/edit_text_4"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:elevation="4dp"
        android:hint="@string/classes" />

    <Button
        android:id="@+id/button"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_below="@id/edit_text_6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:elevation="4dp"
        android:text="@string/continues"
        android:onClick="navigateToHomepageActivity" />

</RelativeLayout>
