<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_fingerprint"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/gambar_account" />

    <ImageButton
        android:id="@+id/imageView1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/notifications"
        tools:ignore="DuplicateIds" />

    <ImageButton
        android:id="@+id/settings_spinner"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/settings"
        />


    <LinearLayout
        android:id="@+id/Line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="110dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/menu"
            android:contentDescription="@string/menu" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textSize="16sp"
                android:textAppearance="@style/text_bold"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_s_your_menu_today_to_confirm"
                android:textSize="12sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Line"
        android:background="@drawable/budget"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_of_the_day"
            android:textAppearance="@style/text_bold_2"/>

        <LinearLayout
                android:layout_marginTop="20dp"
                android:id="@+id/otp_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/image_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/yes_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <!-- First EditText -->
        <Button
            android:id="@+id/yes_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="@string/yes"
            android:minWidth="48dp"
            android:padding="20dp"
            android:onClick="navigateToConfirmActivity" />

        <!-- Second ImageButton -->
        <Button
            android:id="@+id/no_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:text="@string/no"
            android:minWidth="48dp"
            android:padding="20dp"
            android:onClick="showReasonField" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_1"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yes_no"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:gravity="left"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_below="@id/edit_text_1"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:background="@drawable/button_background"
        android:elevation="4dp"
        android:text="@string/send" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bar_home" />

    <ImageButton
        android:id="@+id/imageView6"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/home"/>

    <TextView
        android:id="@+id/home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="top"
        android:lineHeight="32sp"
        android:text="@string/Beranda"
        android:paddingBottom="6dp"
        android:textAppearance="@style/home" />



</RelativeLayout>
